--- a/style.css
+++ b/style.css
@@ -67,6 +67,8 @@ button:hover {
 /* Media query for small devices like smartphones */
 @media (max-width: 768px) {
     body {
+        margin:0;
+        padding:0;
         font-size: 12px;
         /* Adjust font size for small screens */
     }
@@ -74,7 +76,7 @@ button:hover {
     .container {
        
         flex-direction: column;
-        height: 40vh;
+        height: 30vh;
         
     }
 
