--- a/style.css
+++ b/style.css
@@ -66,28 +66,34 @@ button:hover {
 
 /* Media query for small devices like smartphones */
 @media (max-width: 768px) {
+       *
+{
+    margin: 0;
+    padding: 0;
+}
     body {
         font-size: 12px;
         /* Adjust font size for small screens */
+    
     }
 
     .container {
-       
         flex-direction: column;
         height: 30vh;
-        
+
     }
 
-    .box-image {
+    .image {
         width: 90%;
        padding: 0 !important;
     }
-
-    .main-text {
+    h2{margin: 20px;}
+    .text {
         text-align: center;
         padding: 0px !important;
-        line-height: 1.4;
+       line-height: 1.5;
     }
+    button{margin-top: 20px;}
 }
 
 /* Media query for tablets and medium-sized devices */
